--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,20 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+/node_modules
+
+*test*
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
